加入记忆库框架

--- a/KnowledgeBase/field_mapping.json
+++ b/KnowledgeBase/field_mapping.json
@@ -58,7 +58,8 @@
         "standard": "天津大学",
         "aliases": [
             "北洋大学",
-            "河北工学院"
+            "河北工学院",
+            "国立北洋大学"
         ]
     }
 ]
