--- a/KnowledgeBase/field_mapping.json
+++ b/KnowledgeBase/field_mapping.json
@@ -59,7 +59,8 @@
         "aliases": [
             "北洋大学",
             "河北工学院",
-            "国立北洋大学"
+            "国立北洋大学",
+            "TJU"
         ]
     }
 ]
